--- a/master_petugas/templates/master_petugas/index.html
+++ b/master_petugas/templates/master_petugas/index.html
@@ -542,370 +542,28 @@
 <script>
     'use strict'
 
-    var table = $("#basic-datatable").DataTable({
-        processing: true,
-        serverSide: true,
-        ajax: {
-            "url": "{% url 'master_petugas:datatable-json' %}",
-            "headers": {
-                "X-Requested-With": "XMLHttpRequest",
-                "X-CSRFToken": '{{csrf_token}}',
-            },
-            "type": "POST",
-            "data": function (d){
-                return $.extend({}, d, {
-                    "adm_filter": region_code,
-                    "jk_filter": $('#jk-select-filter').val(),
-                    "agama_filter": $('#agama-select-filter').val(),
-                    "pendidikan_filter": $('#pendidikan-select-filter').val(),
-                    "bank_filter": $('#bank-select-filter').val(),
-                    "status_filter": $('#status-select-filter').val(),
-                })
-            },
-        },
-        columns :[
-            {"data": 'adm_id__region'},
-            {"data": 'adm_id__region'},
-            {"data": 'kode_petugas'},
-            {"data": 'nama_petugas'},
-            {"data": 'nik'},
-            {"data" : 'email'},
-            {"data" : 'no_telp'},
-            {"data" : 'status'},
-            {"data" : 'aksi'},
-        ],
-        lengthMenu: [7, 10, 25, 50, 100],
-        columnDefs: [
-            {
-            'targets': [8], /* column index */
-            'orderable': false, /* true or false */
-            },
-            {
-                "targets": 0,
-                "data": null,
-                "defaultContent": "",
-                "render": function (data, type, row, meta) {
-                    return meta.row + 1;
-                }
-            }
-        ],
-        keys: !0,
-        language: {
-            paginate: {
-            previous: "<i class='mdi mdi-chevron-left'>",
-            next: "<i class='mdi mdi-chevron-right'>",
-            },
-            lengthMenu : "Menampilkan _MENU_",
-            search: "Cari Mitra",
-        },
-        drawCallback: function () {
-            $(".dataTables_paginate > .pagination").addClass("pagination-rounded");
-        },
-    });
+    let table = generate_master_petugas("{% url 'master_petugas:datatable-json' %}", "{{csrf_token}}") 
  
-    function get_administrative(e){
-        var code = $(e).val()
-        var id = $(e).attr('id')
-        
-        reset_administrative(false, id, true)
-        if (code.length == 0) return false
-        region_code = code
-        if (id == 'filter_keldes') return table.draw()
-
-        $.ajax({
-            url: '{% url 'master_petugas:adm-fetch' %}',
-            type: "POST",   
-            dataType: "json",
-            data :  {'code' : code},
-            headers: {
-                "X-Requested-With": "XMLHttpRequest",
-                "X-CSRFToken": '{{csrf_token}}',
-            },
-            success: (data) => {
-                if (data.status == 'success'){
-                    if (code.length == 2){
-                        $('#filter_kabkot').html(data.adm)
-                    } else if (code.length == 4){
-                        $('#filter_kec').html(data.adm)
-                    } else {
-                        $('#filter_keldes').html(data.adm)
-                    }
-                    table.draw()
-                }
-            },
-            error: (error) => {
-                console.log(error);
-            }
-        }); 
-    }
+    let get_administrative = (e) => fetch_administrative("{% url 'master_petugas:adm-fetch' %}", '{{csrf_token}}', e)
 
     {% if user.is_staff or 'Administrator' in user.groups.all or user.is_superuser %}
 
-        function editPetugas(e){
-            $('#formMasterPetugas')[0].reset();
-            $('#formMasterPetugas').attr('action', "{% url 'master_petugas:update' %}")
-            $('#submitFormPetugas').html('Update Data')
+        let editPetugas = (e) => edit_petugas_request("{% url 'master_petugas:detail' %}", '{{csrf_token}}', "{% url 'master_petugas:update' %}", e)
         
-            $.ajax({
-                url: '{% url 'master_petugas:detail' %}',
-                type: "POST",
-                dataType: "json",
-                data : {
-                    'id' : e
-                },
-                headers: {
-                    "X-Requested-With": "XMLHttpRequest",
-                    "X-CSRFToken": '{{csrf_token}}',
-                },
-                success: (data) => {
-                    for (const [key, value] of Object.entries(data.instance)) {
-                        $('#id_'+key).val(value)
-                    }
-                    $('.nav-tabs a[href="#input-tab"]').tab('show');
-                },
-                error: (error) => {
-                    console.log(error);
-                }
-            });
-            
-        }
-        
-        function hapusPetugas(e){
-            swalWithBootstrapButtons.fire({
-                title: 'Are you sure?',
-                text: "Apakah anda yakin ingin menghapus data mitra?",
-                icon: 'question',
-                showCancelButton: true,
-                confirmButtonText: 'Yes, delete it!',
-                cancelButtonText: 'No, cancel!',
-                reverseButtons: false
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        url: '{% url 'master_petugas:delete-petugas' %}',
-                        type: "POST",
-                        dataType: "json",
-                        data : {
-                            'id' : e
-                        },
-                        headers: {
-                            "X-Requested-With": "XMLHttpRequest",
-                            "X-CSRFToken": '{{csrf_token}}',
-                        },
-                        success: (data) => {
-                            if (data.status == 'success'){
-                                Swal.fire(
-                                    'Deleted!',
-                                    data.message,
-                                    'success'
-                                    )
-                                table.ajax.reload();
-                            }else{
-                                Swal.fire(
-                                    'Terjadi Kesalahan!',
-                                    data.message,
-                                    'info'
-                                )
-                            }
-                        },
-                        error: (error) => {
-                            console.log(error);
-                        }
-                    });
-                }
-            }) 
+        let hapusPetugas = (e) => delete_general_request("Apakah anda yakin ingin menghapus data mitra ?", "{% url 'master_petugas:delete-petugas' %}", '{{csrf_token}}', e, table)
 
-        }
-        
-        function clearFormValidation(form){
-            $('.form-control').each(function(i, obj) {
-                $(this).removeClass('is-invalid')
-            });
+        let resetForm = () => resetFormPetugas("{% url 'master_petugas:index' %}")
 
-            $('.form-select').each(function(j, obj) {
-                $(this).removeClass('is-invalid')
-            });
-            
-            $('.invalid-feedback').each(function(i, obj) {
-                $(this).html('')
-            });
-        }
+        let checkSubmit = () => checkSubmitPetugas('{{csrf_token}}')
 
-        function resetForm(){
-            $('#formMasterPetugas')[0].reset();
-            $('#formMasterPetugas').attr('action', "{% url 'master_petugas:index' %}")
-            $('#submitFormPetugas').html('Kirim Data')
-            clearFormValidation('#formMasterPetugas')
-        }
-
-        function checkSubmit(){
-            clearFormValidation('#formMasterPetugas')
-            var serializedData = $('#formMasterPetugas').serialize();
-            
-            $.ajax({
-                type: 'POST',
-                url: $('#formMasterPetugas').attr('action'),
-                data: serializedData,
-                success: function (response) {
-                    $('#messages-content').html(response["message"])
-                    $('#msgs-upload').removeClass('alert-danger')
-                    $('#msgs-upload').addClass('alert-success')
-                    $('#msgs-upload').removeClass('d-none')
-                    table.ajax.reload();
-                    $('.nav-tabs a[href="#petugas-preview"]').tab('show');
-                    $('#formMasterPetugas')[0].reset();
-                    $('#formMasterPetugas').trigger("reset");
-                    clearFormValidation('#formMasterPetugas')
-                },
-                error: function (response) {
-                    var errors = response["responseJSON"]["error"]
-                    for (const [key, value] of Object.entries(errors)) {
-                        var msgs = '<ul>'
-                        value.forEach(function (item, index) {
-                        
-                            msgs += '<li>'+item+'</li>'
-                            });
-                        
-                        msgs += '</ul>'
-                        if (key == 'adm_id'){
-                            $('#id_'+ key +'_id').addClass('is-invalid');
-                            $('#msg-id_'+key+'_id').html(msgs)
-                        }else{
-                            $('#id_'+ key).addClass('is-invalid');
-                            $('#msg-id_'+key).html(msgs)
-                        }
-                    }    
-                }
-            })
-        }
-
-        $("#formMasterPetugas").on("submit", function (e){
-            e.preventDefault()
-        })
-    
-        $('#UploadExcelPetugas').on('click', function (e){
-            $('#upload-petugas-excel').modal('show')
-        })
-
-        $('#get-templates-upload').on('click', () =>{
-            var numrows = $('#number_rows').val()
-            return window.location.replace("http://127.0.0.1:8000/master-petugas/template/" + numrows);
-        })
-    
-        $('#{{form_upload.import_file.id_for_label}}').on('change', () =>{
-            preview_excel('preview-data-upload', '{{form_upload.import_file.id_for_label}}', 18)
-        })
-    
-        $('#btn-submit-file').on('click', (e) => {
-            $('#nav-item-import').removeClass('d-none')
-            $('.nav-tabs a[href="#import-tab"]').tab('show');
-            $(this).blur()
-            $('#import-modal').modal('toggle')
-        })
+        $('#{{form_upload.import_file.id_for_label}}').on('change', () => preview_excel('preview-data-upload', '{{form_upload.import_file.id_for_label}}', 18))
        
-        $('#confirm-submit-file').on('click', () => {
-              swalWithBootstrapButtons.fire({
-                title: 'Are you sure?',
-                text: "Apakah anda yakin ingin mengupload data mitra?",
-                icon: 'question',
-                showCancelButton: true,
-                confirmButtonText: 'Yes, upload it!',
-                cancelButtonText: 'No, cancel!',
-                reverseButtons: true
-              }).then((result) => {
-                if (result.isConfirmed) {
-                    var data = new FormData();
-                    data.append("import_file", $('#{{form_upload.import_file.id_for_label}}').get(0).files[0])
-                    $.ajax({
-                        type: 'POST',
-                        url: '{% url 'master_petugas:upload-petugas' %}',
-                        data: data,
-                        processData: false,
-                        contentType: false,
-                        headers: {
-                            "X-Requested-With": "XMLHttpRequest",
-                            "X-CSRFToken": '{{csrf_token}}',
-                        },
-                        success: function (response) {
-                            
-                            if (response.status == 'error'){
+        $('#confirm-submit-file').on('click', () => confirmSubmitFile("{% url 'master_petugas:upload-petugas' %}", '{{csrf_token}}',$('#{{form_upload.import_file.id_for_label}}').get(0).files[0]))
     
-                                var content_msgs = '<strong>Terjadi kesalahan</strong> saat import data: <ol class="px-3 font-12">'
-    
-                                for (let i = 0; i < response.messages.length; i++) {
-                                    content_msgs += '<li>'+ response.messages[i] +'</li>'
-                                }
-                                
-                                $('#messages-content').html(content_msgs)
-                                $('#msgs-upload').removeClass('alert-success')
-                                $('#msgs-upload').addClass('alert-danger')
-                                $('#msgs-upload').removeClass('d-none')
-                            }else{
-                                var content_msgs = response.messages
-                                
-                                $('#messages-content').html(content_msgs)
-                                $('#msgs-upload').removeClass('alert-danger')
-                                $('#msgs-upload').addClass('alert-success')
-                                $('#msgs-upload').removeClass('d-none')
-    
-                                $('#nav-item-import').addClass('d-none')
-                                $('.nav-tabs a[href="#petugas-preview"]').tab('show');
-                                table.ajax.reload();
-        
-                            }
-                        },
-                        error: function (xhr, status, error) {
-                            return console.log(xhr.responseText['messages'])
-                        }
-                    })
-                } else if (result.dismiss === Swal.DismissReason.cancel) {
-                  swalWithBootstrapButtons.fire(
-                    'Cancelled',
-                    'Data successfully cancelled',
-                    'error'
-                  )
-                }
-            }) 
-        })
-    
-        $(document).on('change', '.form-control, .form-select', () => {
-            if ($(this).hasClass('is-invalid')){
-                $(this).removeClass('is-invalid')
-            }
-        });
-
-        $("#form-upload-petugas").on("submit", function (e){
+        $("#form-upload-petugas").on("submit", (e) => {
             e.preventDefault()
             var formData = new FormData(this);
-            $.ajax({
-                type: 'POST',
-                url: $(this).attr('action'),
-                data: formData,
-                processData: false,
-                contentType: false,
-                headers: {
-                    "X-Requested-With": "XMLHttpRequest",
-                    "X-CSRFToken": '{{csrf_token}}',
-                },
-                success: function (response) {
-                    if (response.status == 'error') {
-                        var error_list = '<ol>'
-                        for (let i = 0; i < response.message.length; i++) {
-                            error_list += '<li class="p-1">'+ response.message[i].error +'</li>'
-                        }
-                        error_list += '</ol>'
-    
-                        $("#error-upload-files").html(error_list)
-                        $("#error-upload-files").removeClass('d-none')
-                    } else{
-                        $("#ConfirmUploadExcelPetugas").removeClass('d-none')
-                        return alert('Success')
-                    }
-                },
-                error: function (response) {
-                    return console.log(response)
-                }
-            })
+            uploadPetugas($(this).attr('action'), '{{csrf_token}}', formData)
         })
     {% endif %}
 
