--- a/master_pegawai/templates/master_pegawai/index.html
+++ b/master_pegawai/templates/master_pegawai/index.html
@@ -227,186 +227,25 @@
 {% block tables-script-extend %}
 <script src="{% static 'pages/js/master_pegawai.js' %}"></script>
 <script>
-
     'use strict'
 
-    var table = $("#basic-datatable").DataTable({
-        processing: true,
-        serverSide: true,
-        ajax: {
-            "url": "{% url 'master_pegawai:datatable-json' %}",
-            "headers": {
-                "X-Requested-With": "XMLHttpRequest",
-                "X-CSRFToken": '{{csrf_token}}',
-            },
-            "type": "POST",
-            "data": function (d){
-                return $.extend({}, d, {
-                    "pangkat_filter": $('#pangkat-filter').val(),
-                    "jabatan_filter": $('#jabatan-filter').val()
-                })
-            },
-        },
-        columns :[
-            {"data": 'nip'},
-            {"data": 'nip'},
-            {"data": 'nip_bps'},
-            {"data": 'name'},
-            {"data" : 'pangkat__golongan'},
-            {"data" : 'jabatan__jabatan'},
-            {"data" : 'user'},
-            {"data" : 'aksi'},
-        ],
-        lengthMenu: [10, 25, 50, 100],
-        columnDefs: [ {
-            'targets': [7], /* column index */
-            'orderable': false, /* true or false */
-        },
-        {
-            "targets": 0,
-            "data": null,
-            "className": "text-center",
-            "defaultContent": "",
-            "render": function (data, type, row, meta) {
-                return meta.row + 1;
-            }
-        }
-        ],
-        keys: !0,
-        language: {
-            paginate: {
-            previous: "<i class='mdi mdi-chevron-left'>",
-            next: "<i class='mdi mdi-chevron-right'>",
-            },
-            lengthMenu : "Menampilkan _MENU_",
-            search: "Cari Pegawai",
-        },
-        drawCallback: function () {
-            $(".dataTables_paginate > .pagination").addClass("pagination-rounded");
-        },
-    });
+    var table = generate_master_pegawai("{% url 'master_pegawai:datatable-json' %}", '{{csrf_token}}')
 
     {% if user.is_staff or 'Administrator' in user.groups.all or user.is_superuser %}
-        function editPegawai(e){
-            $('#formMasterPegawai')[0].reset();
-            $('#formMasterPegawai').attr('action', "{% url 'master_pegawai:update' %}")
-            $('#submitFormPegawai').html('Update Data')
-        
-            $.ajax({
-                url: '{% url 'master_pegawai:detail' %}',
-                type: "POST",
-                dataType: "json",
-                data : {
-                    'id' : e
-                },
-                headers: {
-                    "X-Requested-With": "XMLHttpRequest",
-                    "X-CSRFToken": '{{csrf_token}}',
-                },
-                success: (data) => {
-                    for (const [key, value] of Object.entries(data.instance)) {
-                        $('#id_'+key).val(value)
-                    }
-                    $('.nav-tabs a[href="#input-tab"]').tab('show');
-                },
-                error: (error) => {
-                    console.log(error);
-                }
-            });
-            
+        let editPegawai = (e) => {
+            edit_pegawai_request("{% url 'master_pegawai:detail' %}", '{{csrf_token}}', "{% url 'master_pegawai:update' %}", e)
         }
         
-        function hapusPegawai(e){
-            swalWithBootstrapButtons.fire({
-                title: 'Are you sure?',
-                text: "Apakah anda yakin ingin menghapus data pegawai?",
-                icon: 'question',
-                showCancelButton: true,
-                confirmButtonText: 'Yes, delete it!',
-                cancelButtonText: 'No, cancel!',
-                reverseButtons: false
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    $.ajax({
-                        url: '{% url 'master_pegawai:delete' %}',
-                        type: "POST",
-                        dataType: "json",
-                        data : {
-                            'id' : e
-                        },
-                        headers: {
-                            "X-Requested-With": "XMLHttpRequest",
-                            "X-CSRFToken": '{{csrf_token}}',
-                        },
-                        success: (data) => {
-                            if (data.status == 'success'){
-                                Swal.fire(
-                                    'Deleted!',
-                                    data.message,
-                                    'success'
-                                    )
-                                table.ajax.reload();
-                            }else{
-                                Swal.fire(
-                                    'Terjadi Kesalahan!',
-                                    data.message,
-                                    'info'
-                                )
-                            }
-                        },
-                        error: (error) => {
-                            console.log(error);
-                        }
-                    });
-                }
-            }) 
+        let hapusPegawai = (e) => {
+            delete_general_request("Apakah anda yakin ingin menghapus data pegawai ?", "{% url 'master_pegawai:delete' %}", '{{csrf_token}}', e, table)
         }
 
-        function resetForm(){
-            $('#formMasterPegawai')[0].reset();
-            $('#formMasterPegawai').attr('action', "{% url 'master_pegawai:index' %}")
-            $('#submitFormPegawai').html('Kirim Data')
-            clearFormValidation('#formMasterPegawai')
+        let resetForm = () => {
+            resetFormPegawai("{% url 'master_pegawai:index' %}")
         }
         
-        function checkSubmit(){
-            var serializedData = $('#formMasterPegawai').serialize();
-            clearFormValidation('#formMasterPegawai')
-            
-            $.ajax({
-                type: 'POST',
-                url: $('#formMasterPegawai').attr('action'),
-                data: serializedData,
-                success: function (response) {
-                    $('#messages-content').html(response["message"])
-                    $('#msgs-feedback').removeClass('alert-danger')
-                    $('#msgs-feedback').addClass('alert-success')
-                    $('#msgs-feedback').removeClass('d-none')
-                    table.ajax.reload();
-                    $('.nav-tabs a[href="#pegawai-preview"]').tab('show');
-                    $('#formMasterPegawai')[0].reset();
-                },
-                error: function (response) {
-                    var errors = response["responseJSON"]["error"]
-                    console.log(errors)
-                    for (const [key, value] of Object.entries(errors)) {
-                        var msgs = '<ul>'
-                        value.forEach(function (item, index) {
-                        
-                            msgs += '<li>'+item+'</li>'
-                            });
-                        
-                        msgs += '</ul>'
-                        if (key == 'adm_id'){
-                            $('#id_'+ key +'_id').addClass('is-invalid');
-                            $('#msg-id_'+key+'_id').html(msgs)
-                        }else{
-                            $('#id_'+ key).addClass('is-invalid');
-                            $('#msg-id_'+key).html(msgs)
-                        }
-                    }    
-                }
-            })
+        let checkSubmit = () => {
+            checkSubmitPegawai('{{csrf_token}}')
         }
     {% endif %}
 </script>
