--- a/master_penilaian/templates/master_penilaian/entry_nilai.html
+++ b/master_penilaian/templates/master_penilaian/entry_nilai.html
@@ -289,6 +289,7 @@
 {% endblock content %}
 
 {% block js-extender %}
+<script src="{% static 'pages/js/entry_nilai.js' %}"></script>
 <script>
 
     let table = $("#list_kegiatan_penilaian").DataTable({
@@ -417,11 +418,6 @@
         bFilter: false,
     });
 
-    let pushValuePenilaian = (id) => {
-        $('#kegiatan_penilaian').val(id)
-        table2.draw()
-    }
-
     let entryPenilaian = (id1, id2) => {
         $.ajax({
             url: '{% url 'master_penilaian:list-indicator-json' %}',
@@ -448,50 +444,6 @@
                 console.log(error);
             }
         });
-
     }
-
-    $('#search-mitra').on("keyup", () => {
-        table3.draw()
-    })
-
-    $('#search-mitra-datatable').on("keyup", () => {
-        table2.draw()
-    })
-
-    $('#refresh-rank').on("click", () => {
-        table3.draw()
-    })
-
-    $('#formPenilaianPetugas').on('submit', function(e){
-        e.preventDefault()
-        var serializedData = $(this).serialize();
-        $.ajax({
-            type: 'POST',
-            url: $(this).attr('action'),
-            data: serializedData,
-            success: function (response) {
-                if (response.status == 'success'){
-                    
-                    Swal.fire(
-                            'Data berhasil disimpan',
-                            response.messages,
-                            'success'
-                    )
-    
-                    table2.ajax.reload();
-                }
-            },
-            error: function (response) {
-                console.log(response)
-            }
-        })
-    })
-
-    $('#close-card-form').on('click', () => {
-        $('.form-select').val('')
-        $('#table_form_penilaian tbody').html('')
-        $('#card-form-penilaian').addClass('d-none')
-    })
 </script>
 {% endblock js-extender %}
