--- a/templates/base/detached-layout/datables.html
+++ b/templates/base/detached-layout/datables.html
@@ -35,7 +35,7 @@
     
     <!-- Datatable Init js -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="{% static 'customs/js/helper.js' %}"></script>
+    <script src="{% static 'pages/js/helpers.js' %}"></script>
     
     {% block tables-script-extend %}
     {% endblock tables-script-extend %}
